--- a/final-jp.html
+++ b/final-jp.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2015-16">
+  <meta name="description" content="SamurAI Coding 2016-17">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2015-16</title>
+  <title>SamurAI Coding 2016-17</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -15,32 +15,30 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
-<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
-<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
-<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
-<a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a><br>
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
-<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
-<a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> <a href="https://moneyforward.com/">マネーフォワード</a><br>
-<a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
-<a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
-<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="60"/></a>
-<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="70"/></a>
-<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="70"/></a>
-<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="70"/></a>
-<img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
-<a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
-</center>  <nav id="global">
+<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a>
+<a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="110"/></a>
+<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a>
+<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
+<br>
+<a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
+<br>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a>
+<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="65"/></a>
+<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="75"/></a>
+<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="75"/></a>
+<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="75"/></a>
+<a href="http://www.juas.or.jp/"><img src="images/JUAS.png" title="Japan Users Association of Information Systems" width="65"/></a>
+<a href="http://www.ieice.org/"><img src="images/IEICE.bmp" title="The Institute of Electronics, Information and Communication Engineers" width="45"/></a>
+<a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="55"/></a>
+<a href="http://www.ipa.go.jp/"><img src="images/IPA.png" title="Information-technology Promotion Agency, Japan" width="85"/></a>
+</center>
+  <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li><a href="schedule-jp.html">日程</a></li>
         <li><a href="rules-jp.html">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
-        <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
+        <li><a href="https://arena.ai-comp.net/">参加登録</a></li>
         <li><a href="preliminary-jp.html">予選</a></li>
         <li><a href="final-jp.html">決勝</a></li>
         <li><a href="faq-jp.html">FAQ</a></li>
@@ -55,98 +53,12 @@
 
 <h3>ルール</h3>
 <ul>
-  <li><a href="FinalRoundRule-jp.pdf">決勝ルール</a></li>
+  <li>決勝ルール</li>
 </ul>
 
 <h3>結果＆提出プログラム</h3>
 
-<p>
-多くの選手、スポンサー、参加者ならびにスタッフ・関係者により、
-SamurAI Coding 2015-16 World Final Roundは無事終了しました。
-グループリーグの対戦の結果、
-18チーム中次の6チームが最終の決勝に進出しました:
-piyo, sinryakudegeso, Tuure, kwrig, arukuka & mztmr_nggts, siman。
-さらに決勝リーグの対戦の結果、
-チーム piyo が優勝しました。 
-また、賞金およびスポンサー賞は下記のチームに授与されました。
-おめでとうございます！ さらに懇親会にてネットワーキングを実施しました。 ありがとうございました、そして、また次の機会にお会いしましょう！
-</p>
-
-<p>
-決勝参加チームの好意により、
-公開許可をいただいた提出プログラムを表中に掲載しました。
-</p>
-
-<ul>
-<li>賞金: piyo 50,000JPY, sinryakudegeso 30,000JPY, 
-Tuure 10,000JPY, kwrig 5,000JPY, arukuka & mztmr_nggts 5,000JPY, siman 5,000JPY
-<li>レコチョク スポンサー賞 (RecoChoku Music Gift Card): piyo, sinryakudegeso, Tuure
-<li>いい生活 スポンサー賞 (Sony MESH): piyo, kwrig
-</ul>
-
-<img src="images/FinalLeagueStats.png" width="600"/>
-
-<table>
-	<tr align="center">
-		<th>Place</th>
-		<th>Team name</th>
-		<th>Points</th>
-	</tr>
-	<tr align="center">
-		<td>1</td>
-		<td><a href="programs/2015-16-Team piyo.zip">piyo</a></td>
-		<td>25394</td>
-	</tr>
-	<tr align="center">
-		<td>2</td>
-		<td><a href="programs/2015-16-sinryakudegeso.zip">sinryakudegeso</a></td>
-		<td>24861</td>
-	</tr>
-	<tr align="center">
-		<td>3</td>
-		<td>Tuure</td>
-		<td>23757</td>
-	</tr>
-	<tr align="center">
-		<td>4</td>
-		<td><a href="programs/2015-16-kwrig.zip">kwrig</a></td>
-		<td>20609</td>
-	</tr>
-	<tr align="center">
-		<td>5</td>
-		<td><a href="programs/2015-16-arukuka & mztmr_nggts.zip">arukuka & mztmr_nggts</a></td>
-		<td>19563</td>
-	</tr>
-	<tr align="center">
-		<td>6</td>
-		<td><a href="programs/2015-16-siman.zip">siman</a></td>
-		<td>18749</td>
-	</tr>
-</table>
-
-<p></p>
-
-<p>
-7th Place (Finalists): omu, yamatchan, Emily, kni2621 (Group A), 
-iwashi31, nhho, nocorupe, KuasAI104 (Group B), 
-Taiyo, suikkee, y_kawano, takapt (Group C)
-</p>
-
-<h3>ビデオ・写真</h3>
-
-<p>
-当日の会場中継ビデオをニコニコ生放送よりご覧いただけます: <a href="http://live.nicovideo.jp/watch/lv253878684">http://live.nicovideo.jp/watch/lv253878684</a>
-</p>
-
-<a href="images/Final1.jpg"><img src="images/Final1.jpg" width="300"/></a> <a href="images/Final2.jpg"><img src="images/Final2.jpg" width="300"/></a> <a href="images/Final3.jpg"><img src="images/Final3.jpg" width="300"/></a>
-
-<a href="images/Final4.jpg"><img src="images/Final4.jpg" width="300"/></a> <a href="images/Final5.jpg"><img src="images/Final5.jpg" width="300"/></a> <a href="images/Final6.jpg"><img src="images/Final6.jpg" width="300"/></a>
-
-<a href="images/Final7.jpg"><img src="images/Final7.jpg" width="300"/></a> <a href="images/Final8.jpg"><img src="images/Final8.jpg" width="300"/></a> <a href="images/Final9.jpg"><img src="images/Final9.jpg" width="300"/></a>
-
-<a href="images/Final10.jpg"><img src="images/Final10.jpg" width="300"/></a> <a href="images/Final11.jpg"><img src="images/Final11.jpg" width="300"/></a> <a href="images/Final12.jpg"><img src="images/Final12.jpg" width="300"/></a>
-
-<a href="images/Final13.jpg"><img src="images/Final13.jpg" width="300"/></a>
+(TBD)
 
 <hr>
 <footer>
@@ -157,8 +69,8 @@ Taiyo, suikkee, y_kawano, takapt (Group C)
           <section id="contact">
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 4階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
-          samurai2015-contact@ipsj.or.jp</a></p>
+            <p>email: <a class="contactadddr" href="mailto:samurai-contact@ipsj.or.jp">
+          samurai-contact@ipsj.or.jp</a></p>
           <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
@@ -166,85 +78,109 @@ Taiyo, suikkee, y_kawano, takapt (Group C)
           <section id="sponsors">
             <h3>ゴールドスポンサー</h3>
             <p>株式会社いい生活<br>
-            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-<p>株式会社日立製作所<br>
-<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
+            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a></p>
+            <p>チームラボ株式会社<br>
+            <a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="110"/></a></p>
 
+<p>株式会社日立製作所<br>
+<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a></p>
+
+<p>富士通株式会社<br>
+<a href="http://www.fujitsu.com/jp/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
+</p>
+
+<!--
 <p>株式会社レコチョク<br>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></p>
 
 <p>TIS株式会社<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
-
+-->
 
             <h3>サポーター</h3>
-<p>ヴォーカル・スクール ヴィーナス<br>
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
+
+<p>株式会社日本レジストリサービス（JPRS）<br>
+<a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
 </p>
 
-<p>富士通株式会社<br>
-<a href="http://www.fujitsu.com/jp/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
+<!--
+<p>ヴォーカル・スクール ヴィーナス<br>
+<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
 
 <p>クレイ・ジャパン・インク<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
+-->
 
 <h3>メディアスポンサー</h3>
+<!--
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 
 <p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
+-->
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
             <p class="smaller">
-
+<!--
 China Computer Federation<br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="80"/></a><br><br>
 
 慶應義塾大学理工学部情報工学科<br>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="60"/></a><br><br>
+-->
+
+本事業は、公益財団法人栢森情報科学振興財団による助成を受けています。<br><br>
 
 IEEE Computer Society<br>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="100"/></a><br><br>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a><br><br>
 
 IEEE Computer Society Japan Chapter<br><br>
 
 IEEE Japan Office<br>
-<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="80"/></a><br><br>
+<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="65"/></a><br><br>
 
 財団法人 情報科学国際交流財団<br><br>
 
 一般社団法人電子情報技術産業協会<br>
-<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="90"/></a><br><br>
+<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="75"/></a><br><br>
 
 一般社団法人情報サービス産業協会<br>
-<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="90"/></a><br><br>
+<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="75"/></a><br><br>
 
 一般社団法人日本ソフトウェア科学会<br>
-<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="90"/></a><br><br>
+<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="75"/></a><br><br>
 
-一般社団法人日本情報システム・ユーザー協会<br><br>
+一般社団法人日本情報システム・ユーザー協会<br>
+<a href="http://www.juas.or.jp/"><img src="images/JUAS.png" title="Japan Users Association of Information Systems" width="65"/></a>
+<br><br>
 
-一般社団法人電子情報通信学会<br><br>
+一般社団法人電子情報通信学会<br>
+<a href="http://www.ieice.org/"><img src="images/IEICE.bmp" title="The Institute of Electronics, Information and Communication Engineers" width="45"/></a>
+<br><br>
 
 一般社団法人人工知能学会<br>
-<a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="70"/></a><br><br>
+<a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="55"/></a><br><br>
 
+<!--
 The Korean Institute of Information Scientists and Engineers<br>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
+-->
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
             <p class="smaller">
-独立行政法人情報処理推進機構<br><br>
-経済産業省<br><br>
+独立行政法人情報処理推進機構<br>
+<a href="http://www.ipa.go.jp/"><img src="images/IPA.png" title="Information-technology Promotion Agency, Japan" width="85"/></a>
+
+<br><br>
+<!-- 経済産業省<br><br> -->
 文部科学省
             </p>
           </section>
