--- a/final.html
+++ b/final.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="Description" content="SamurAI Coding 2015-16">
+  <meta name="Description" content="SamurAI Coding 2016-17">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2015-16</title>
+  <title>SamurAI Coding 2016-17</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -15,26 +15,22 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
-<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
-<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
-<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
-<a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a><br>
+<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a>
+<a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="110"/></a>
+<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a>
+<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
 <br>
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
-<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
-<a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> 
-<a href="https://moneyforward.com/">Money Forward</a><br>
-<a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
-<a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
-<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="60"/></a>
-<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="70"/></a>
-<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="70"/></a>
-<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="70"/></a>
-<img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
-<a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
+<a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
+<br>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a>
+<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="65"/></a>
+<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="75"/></a>
+<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="75"/></a>
+<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="75"/></a>
+<a href="http://www.juas.or.jp/"><img src="images/JUAS.png" title="Japan Users Association of Information Systems" width="65"/></a>
+<a href="http://www.ieice.org/"><img src="images/IEICE.bmp" title="The Institute of Electronics, Information and Communication Engineers" width="45"/></a>
+<a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="55"/></a>
+<a href="http://www.ipa.go.jp/"><img src="images/IPA.png" title="Information-technology Promotion Agency, Japan" width="85"/></a>
 </center>
   <nav id="global">
       <ul>
@@ -42,8 +38,7 @@
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="rules.html">Rules</a></li>
         <li><a href="software.html">Software</a></li>
-        <li><a href="tutorial.html">Tutorial</a></li>
-        <li><a href="http://arena.ai-comp.net/">Entry</a></li>
+        <li><a href="https://arena.ai-comp.net/">Entry</a></li>
         <li><a href="preliminary.html">Preliminary</a></li>
         <li><a href="final.html">Final</a></li>
         <li><a href="faq.html">FAQ</a></li>
@@ -58,97 +53,12 @@
 <h3>Rules</h3>
 
 <ul>
-  <li><a href="FinalRoundRule-en.pdf">Final Round Rules</a></li>
+  <li>Final Round Rules</li>
 </ul>
 
 <h3>Results and Submitted Program</h3>
 
-<p>
-Thanks to many contestants, sponsors, supporters and staffs, 
-SamurAI Coding 2015-16 World Final Round was successfully over! 
-By conducting group league matches, 
-six teams (among 18) advanced to the Final league: 
-piyo, sinryakudegeso, Tuure, kwrig, arukuka & mztmr_nggts, and siman. 
-And finally the winner was team piyo! 
-And the following teams received prizes. 
-Congratulations! Moreover we had a great networking at the banquet! 
-Thank you again, and, see you next time!
-</p>
-
-<p>
-AI programs of the finalists have been published on the result table.
-</p>
-
-<ul>
-<li>Cash Prize: piyo 50,000JPY, sinryakudegeso 30,000JPY, 
-Tuure 10,000JPY, kwrig 5,000JPY, arukuka & mztmr_nggts 5,000JPY, siman 5,000JPY
-<li>RecoChoku Prize (RecoChoku Music Gift Card): piyo, sinryakudegeso, Tuure
-<li>e-Seikatsu Prize (Sony MESH): piyo, kwrig
-</ul>
-
-<img src="images/FinalLeagueStats.png" width="600"/>
-
-<table>
-	<tr align="center">
-		<th>Place</th>
-		<th>Team name</th>
-		<th>Points</th>
-	</tr>
-	<tr align="center">
-		<td>1</td>
-		<td><a href="programs/2015-16-Team piyo.zip">piyo</a></td>
-		<td>25394</td>
-	</tr>
-	<tr align="center">
-		<td>2</td>
-		<td><a href="programs/2015-16-sinryakudegeso.zip">sinryakudegeso</a></td>
-		<td>24861</td>
-	</tr>
-	<tr align="center">
-		<td>3</td>
-		<td>Tuure</td>
-		<td>23757</td>
-	</tr>
-	<tr align="center">
-		<td>4</td>
-		<td><a href="programs/2015-16-kwrig.zip">kwrig</a></td>
-		<td>20609</td>
-	</tr>
-	<tr align="center">
-		<td>5</td>
-		<td><a href="programs/2015-16-arukuka & mztmr_nggts.zip">arukuka & mztmr_nggts</a></td>
-		<td>19563</td>
-	</tr>
-	<tr align="center">
-		<td>6</td>
-		<td><a href="programs/2015-16-siman.zip">siman</a></td>
-		<td>18749</td>
-	</tr>
-</table>
-
-<p></p>
-
-<p>
-7th Place (Finalists): omu, yamatchan, Emily, kni2621 (Group A), 
-iwashi31, nhho, nocorupe, KuasAI104 (Group B), 
-Taiyo, suikkee, y_kawano, takapt (Group C)
-</p>
-
-<h3>Video and Photo</h3>
-
-<p>
-Video is available at Nico Nico Live: <a href="http://live.nicovideo.jp/watch/lv253878684">http://live.nicovideo.jp/watch/lv253878684</a>
-</p>
-
-<a href="images/Final1.jpg"><img src="images/Final1.jpg" width="300"/></a> <a href="images/Final2.jpg"><img src="images/Final2.jpg" width="300"/></a> <a href="images/Final3.jpg"><img src="images/Final3.jpg" width="300"/></a>
-
-<a href="images/Final4.jpg"><img src="images/Final4.jpg" width="300"/></a> <a href="images/Final5.jpg"><img src="images/Final5.jpg" width="300"/></a> <a href="images/Final6.jpg"><img src="images/Final6.jpg" width="300"/></a>
-
-<a href="images/Final7.jpg"><img src="images/Final7.jpg" width="300"/></a> <a href="images/Final8.jpg"><img src="images/Final8.jpg" width="300"/></a> <a href="images/Final9.jpg"><img src="images/Final9.jpg" width="300"/></a>
-
-<a href="images/Final10.jpg"><img src="images/Final10.jpg" width="300"/></a> <a href="images/Final11.jpg"><img src="images/Final11.jpg" width="300"/></a> <a href="images/Final12.jpg"><img src="images/Final12.jpg" width="300"/></a>
-
-<a href="images/Final13.jpg"><img src="images/Final13.jpg" width="300"/></a>
+(TBD)
 
 <hr>
 <footer>
@@ -161,9 +71,9 @@ Video is available at Nico Nico Live: <a href="http://live.nicovideo.jp/watch/lv
       	    <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
       	      1-5 Kanda-Surugadai, Chiyoda-ku,
       	      Tokyo 101-0062 JAPAN<br>
-      	    email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
+      	    email: <a class="contactadddr" href="mailto:samurai-contact@ipsj.or.jp">
 
-      		  samurai2015-contact@ipsj.or.jp</a><br>
+      		  samurai-contact@ipsj.or.jp</a><br>
             web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
             </p>
             <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
@@ -174,76 +84,106 @@ Video is available at Nico Nico Live: <a href="http://live.nicovideo.jp/watch/lv
             <h3>Gold Sponsors</h3>
             <p>e-Seikatsu Co., Ltd.<br>
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a></p>
+            <p>teamLab<br>
+            <a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="110"/></a></p>
+
           <p>Hitachi, Ltd.<br>
-            <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="145"/></a></p>
+            <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a></p>
+
+<p>Fujitsu Limited<br>
+<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
+</p>
+
+<!--
 <p>RecoChoku Co.,Ltd.<br>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></p>
 <p>TIS Inc.<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
+-->
             <h3>Supporters</h3>
+
+<p>Japan Registry Services Co., Ltd.<br>
+<a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
+</p>
+
+<!--
 <p>Vocal School, Venus<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
 
-<p>Fujitsu Limited<br>
-<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
-</p>
 <p>Cray Japan Inc.<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
+-->
 
 <h3>Media Sponsors</h3>
+<!--
             <p>GSTYLUS<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 <p><a href="https://moneyforward.com/">Money Forward, Inc.</a></p>
       	  </section>
+-->
       	</td>
       	<td>
       	  <section id="supporters">
       	    <h3>Supporters</h3>
+
             <p class="smaller">
+<!--
 China Computer Federation<br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="80"/></a><br><br>
 
 Department of Information and Computer Science, Faculty of Science and Technology, Keio University<br>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="60"/></a><br><br>
+-->
+
+This program is supported by the Grant of Kayamori Foundation of International Science Advancement.<br><br>
 
 IEEE Computer Society<br>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="100"/></a><br><br>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a><br><br>
 
 IEEE Computer Society Japan Chapter<br><br>
 
 IEEE Japan Office<br>
-<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="80"/></a><br><br>
+<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="65"/></a><br><br>
 
-Information Technology Promotion Agency, Japan<br><br>
+Information Technology Promotion Agency, Japan<br>
+<a href="http://www.ipa.go.jp/"><img src="images/IPA.png" title="Information-technology Promotion Agency, Japan" width="85"/></a>
+<br><br>
 
 International Information Science Foundation<br><br>
 
 Japan Electronics and Information Technology Industries Association<br>
-<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="90"/></a><br><br>
+<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="75"/></a><br><br>
 
 Japan Information Technology Services Industry Association<br>
-<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="90"/></a><br><br>
+<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="75"/></a><br><br>
 
 Japan Society for Software Science and Technology<br>
-<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="90"/></a><br><br>
+<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="75"/></a><br><br>
 
-Japan Users Association of Information Systems<br><br>
+Japan Users Association of Information Systems<br>
+<a href="http://www.juas.or.jp/"><img src="images/JUAS.png" title="Japan Users Association of Information Systems" width="65"/></a>
+<br><br>
 
-The Institute of Electronics, Information and Communications Engineers<br><br>
+The Institute of Electronics, Information and Communication Engineers<br>
+<a href="http://www.ieice.org/"><img src="images/IEICE.bmp" title="The Institute of Electronics, Information and Communication Engineers" width="45"/></a>
+<br><br>
 
 The Japanese Society for Artificial Intelligence<br>
-<a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="70"/></a><br><br>
+<a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="55"/></a><br><br>
 
+<!--
 The Korean Institute of Information Scientists and Engineers<br>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a><br><br>
+-->
 
+<!--
 The Ministry of Economy, Trade and Industry<br><br>
+-->
 
 The Ministry of Education, Culture, Sports, Science and Technology
-
              </p>
           </section>
       	</td>
@@ -251,6 +191,7 @@ The Ministry of Education, Culture, Sports, Science and Technology
     </table>
   </div>
 </footer>
+
 
   </body>
 </html>
