--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2015-16">
+  <meta name="description" content="SamurAI Coding 2016-17">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2015-16</title>
+  <title>SamurAI Coding 2016-17</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -15,32 +15,30 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
-<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
-<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
-<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
-<a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a><br>
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
-<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
-<a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> <a href="https://moneyforward.com/">マネーフォワード</a><br>
-<a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
-<a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
-<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="60"/></a>
-<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="70"/></a>
-<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="70"/></a>
-<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="70"/></a>
-<img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
-<a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
-</center>  <nav id="global">
+<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a>
+<a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="110"/></a>
+<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a>
+<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
+<br>
+<a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
+<br>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a>
+<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="65"/></a>
+<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="75"/></a>
+<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="75"/></a>
+<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="75"/></a>
+<a href="http://www.juas.or.jp/"><img src="images/JUAS.png" title="Japan Users Association of Information Systems" width="65"/></a>
+<a href="http://www.ieice.org/"><img src="images/IEICE.bmp" title="The Institute of Electronics, Information and Communication Engineers" width="45"/></a>
+<a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="55"/></a>
+<a href="http://www.ipa.go.jp/"><img src="images/IPA.png" title="Information-technology Promotion Agency, Japan" width="85"/></a>
+</center>
+  <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li><a href="schedule-jp.html">日程</a></li>
         <li><a href="rules-jp.html">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
-        <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
+        <li><a href="https://arena.ai-comp.net/">参加登録</a></li>
         <li><a href="preliminary-jp.html">予選</a></li>
         <li><a href="final-jp.html">決勝</a></li>
         <li><a href="faq-jp.html">FAQ</a></li>
@@ -54,15 +52,12 @@
     <section id="importantdates">
       <h2>主要日程</h2>
       <ul>
-        <li>ルール公開、応募受付開始：2015年10-11月</li>
-<font color="red"><b>
-        <li>オンライン予選 1次募集締切：2016年2月8日 AoE（日本時間 2月9日 20:59）システムのメンテナンスの実施に伴い延長しました</li>
-        <li>オンライン予選 1次募集結果発表：2016年2月12日（予定）9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
-        <li>オンライン予選 2次募集締切：2016年2月22日 AoE（日本時間 2月23日 20:59）システムのメンテナスの実施に伴い延長しました
+        <li>ルール公開：2016年9-10月</li>
+        <li>オンライン予選 募集締切：2017年2月12日（日）20:59（日本時間）</li>
+        <li>オンライン予選 結果発表：2017年2月17日（金）頃 ※16チーム選抜（うち最大5チームは多様性および地域バランス等を考慮した特別選抜枠の予定）
 </li>
-        <li>オンライン予選 2次募集結果発表：2016年2月26日（予定）9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
-</b></font>
-        <li>決勝（於 慶應義塾大学） 　　：2016年3月11日　※<a href="http://www.ipsj.or.jp/event/taikai/78">情報処理学会第78回全国大会併催</a></li>
+        <li>決勝（於 名古屋大学） 　　：2017年3月17日（金）　※<a href="http://www.ipsj.or.jp/event/taikai/79">情報処理学会第79回全国大会併催</a></li>
+
       </ul>
     </section>
 
@@ -75,8 +70,8 @@
           <section id="contact">
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 4階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
-          samurai2015-contact@ipsj.or.jp</a></p>
+            <p>email: <a class="contactadddr" href="mailto:samurai-contact@ipsj.or.jp">
+          samurai-contact@ipsj.or.jp</a></p>
           <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
@@ -84,85 +79,109 @@
           <section id="sponsors">
             <h3>ゴールドスポンサー</h3>
             <p>株式会社いい生活<br>
-            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-<p>株式会社日立製作所<br>
-<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
+            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a></p>
+            <p>チームラボ株式会社<br>
+            <a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="110"/></a></p>
 
+<p>株式会社日立製作所<br>
+<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a></p>
+
+<p>富士通株式会社<br>
+<a href="http://www.fujitsu.com/jp/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
+</p>
+
+<!--
 <p>株式会社レコチョク<br>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></p>
 
 <p>TIS株式会社<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
-
+-->
 
             <h3>サポーター</h3>
-<p>ヴォーカル・スクール ヴィーナス<br>
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
+
+<p>株式会社日本レジストリサービス（JPRS）<br>
+<a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
 </p>
 
-<p>富士通株式会社<br>
-<a href="http://www.fujitsu.com/jp/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
+<!--
+<p>ヴォーカル・スクール ヴィーナス<br>
+<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
 
 <p>クレイ・ジャパン・インク<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
+-->
 
 <h3>メディアスポンサー</h3>
+<!--
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 
 <p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
+-->
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
             <p class="smaller">
-
+<!--
 China Computer Federation<br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="80"/></a><br><br>
 
 慶應義塾大学理工学部情報工学科<br>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="60"/></a><br><br>
+-->
+
+本事業は、公益財団法人栢森情報科学振興財団による助成を受けています。<br><br>
 
 IEEE Computer Society<br>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="100"/></a><br><br>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a><br><br>
 
 IEEE Computer Society Japan Chapter<br><br>
 
 IEEE Japan Office<br>
-<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="80"/></a><br><br>
+<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="65"/></a><br><br>
 
 財団法人 情報科学国際交流財団<br><br>
 
 一般社団法人電子情報技術産業協会<br>
-<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="90"/></a><br><br>
+<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="75"/></a><br><br>
 
 一般社団法人情報サービス産業協会<br>
-<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="90"/></a><br><br>
+<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="75"/></a><br><br>
 
 一般社団法人日本ソフトウェア科学会<br>
-<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="90"/></a><br><br>
+<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="75"/></a><br><br>
 
-一般社団法人日本情報システム・ユーザー協会<br><br>
+一般社団法人日本情報システム・ユーザー協会<br>
+<a href="http://www.juas.or.jp/"><img src="images/JUAS.png" title="Japan Users Association of Information Systems" width="65"/></a>
+<br><br>
 
-一般社団法人電子情報通信学会<br><br>
+一般社団法人電子情報通信学会<br>
+<a href="http://www.ieice.org/"><img src="images/IEICE.bmp" title="The Institute of Electronics, Information and Communication Engineers" width="45"/></a>
+<br><br>
 
 一般社団法人人工知能学会<br>
-<a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="70"/></a><br><br>
+<a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="55"/></a><br><br>
 
+<!--
 The Korean Institute of Information Scientists and Engineers<br>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
+-->
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
             <p class="smaller">
-独立行政法人情報処理推進機構<br><br>
-経済産業省<br><br>
+独立行政法人情報処理推進機構<br>
+<a href="http://www.ipa.go.jp/"><img src="images/IPA.png" title="Information-technology Promotion Agency, Japan" width="85"/></a>
+
+<br><br>
+<!-- 経済産業省<br><br> -->
 文部科学省
             </p>
           </section>
