Sponsors were added.

--- a/faq.html
+++ b/faq.html
@@ -19,8 +19,10 @@
 <a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="110"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
+<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="172"/></a>
 <br>
 <a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="75"/></a> 
 <br>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a>
 <a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="65"/></a>
@@ -93,9 +95,10 @@
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
 </p>
 
-<!--
 <p>RecoChoku Co.,Ltd.<br>
-<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></p>
+<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="172"/></a></p>
+
+<!--
 <p>TIS Inc.<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
@@ -117,9 +120,10 @@
 -->
 
 <h3>Media Sponsors</h3>
-<!--
+
             <p>GSTYLUS<br>
-            <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
+            <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="75"/></a></p>
+<!--
 <p><a href="https://moneyforward.com/">Money Forward, Inc.</a></p>
       	  </section>
 -->
