--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -19,8 +19,10 @@
 <a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="110"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
+<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="172"/></a>
 <br>
 <a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="75"/></a> 
 <br>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a>
 <a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="65"/></a>
@@ -90,10 +92,10 @@
 <a href="http://www.fujitsu.com/jp/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
 </p>
 
-<!--
 <p>株式会社レコチョク<br>
-<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></p>
+<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="172"/></a></p>
 
+<!--
 <p>TIS株式会社<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
@@ -116,10 +118,11 @@
 -->
 
 <h3>メディアスポンサー</h3>
-<!--
-            <p>株式会社ジースタイラス<br>
-            <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 
+            <p>株式会社ジースタイラス<br>
+            <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="75"/></a></p>
+
+<!--
 <p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
 -->
           </section>
