Final Round Rules published

--- a/final-jp.html
+++ b/final-jp.html
@@ -55,7 +55,7 @@
 
 <h3>ルール</h3>
 <ul>
-  <li>決勝ルール</li>
+  <li><a href="FinalRoundRule-jp.pdf">決勝ルール</a> (2016年12月22日版)</li>
 </ul>
 
 <h3>結果＆提出プログラム</h3>
