--- a/final.html
+++ b/final.html
@@ -55,7 +55,7 @@
 <h3>Rules</h3>
 
 <ul>
-  <li>Final Round Rules</li>
+  <li><a href="FinalRoundRule-en.pdf">Final Round Rules</a> (2016 Dec 22 edition)</li>
 </ul>
 
 <h3>Results and Submitted Program</h3>
