Added Nagoya University as supporter.

--- a/faq-jp.html
+++ b/faq-jp.html
@@ -139,6 +139,9 @@ China Computer Federation<br>
 
 本事業は、公益財団法人栢森情報科学振興財団による助成を受けています。<br><br>
 
+名古屋大学 大学院 情報科学研究科<br>
+<br>
+
 IEEE Computer Society<br>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a><br><br>
 
