--- a/index.html
+++ b/index.html
@@ -334,6 +334,8 @@ The Ministry of Economy, Trade and Industry<br><br>
 -->
 
 The Ministry of Education, Culture, Sports, Science and Technology
+<br><br>
+The Ministry of Internal Affairs and Communications (TBD)
              </p>
           </section>
       	</td>
