Added server issues.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Jan 14: The battle execution server was in a bad state from 10th Jan to 13th Jan. So, the attempts to compile AIs and auto battle executions kept failed during that time.
 <li>Dec 24: Fix issue with the Visualizer. 
 <li>Dec 22: <a href="final.html">Final Round Rules</a> (Dec 22 edition) are now available. 
 <li>Dec 2: <a href="https://arena.ai-comp.net/">Registration for online preliminary round</a> is now available. Register now!
