--- a/index-jp.html
+++ b/index-jp.html
@@ -105,6 +105,8 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+<li>2月1日: コンテストサーバーは現在不安定な状態が続いています。委員会として本問題の解決に取り組んでいるところです。
+<li>2月1日: コンテストサーバーにおける対戦頻度を上げました。
 <li>1月14日: コンテストサーバーの不調により1月10-13日においてAIプログラムの実行に失敗するなどの現象を生じていました。
 <li>12月24日: ビジュアライザの問題を修正しました。
 <li>12月22日: <a href="final-jp.html">決勝ラウンドのルール</a>（12月22日版）を公開しました。
