--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -22,6 +22,7 @@
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="172"/></a>
 <br>
 <a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
+<a href="http://www.yahoo.co.jp/"><img src="images/Yahoo.gif" width="95"/></a>　
 <a href="http://www.gstylus.co.jp/"><img src="images/gyaku_logo.jpg" width="75"/></a> 
 <br>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a>
@@ -113,6 +114,11 @@
 <a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
 </p>
 
+<p>ヤフー株式会社<br>
+<a href="https://www.yahoo.co.jp/"><img src="images/Yahoo.gif" width="95"/></a>
+</p>
+
+
 <!--
 <p>ヴォーカル・スクール ヴィーナス<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
@@ -196,7 +202,7 @@ The Korean Institute of Information Scientists and Engineers<br>
 <!-- 経済産業省<br><br> -->
 文部科学省
 <br><br>
-総務省（予定）
+総務省
             </p>
           </section>
         </td>
