--- a/rules.html
+++ b/rules.html
@@ -21,7 +21,7 @@
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="172"/></a>
 <br>
 <a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
-<a href="https://www.yahoo.co.jp/"><img src="images/Yahoo.gif" width="95"/></a>
+<a href="http://www.yahoo.co.jp/"><img src="images/Yahoo.gif" width="95"/></a>
 <a href="http://www.gstylus.co.jp/"><img src="images/gyaku_logo.jpg" width="75"/></a> 
 <br>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a>
@@ -119,7 +119,7 @@ AI program that decides the actions of the samurai that plays the games. </p>
 </p>
 
 <p>Yahoo Japan Corporation<br>
-<a href="https://www.yahoo.co.jp/"><img src="images/Yahoo.gif" width="95"/></a>
+<a href="http://www.yahoo.co.jp/"><img src="images/Yahoo.gif" width="95"/></a>
 </p>
 
 
