Add info about server trouble.

--- a/index-jp.html
+++ b/index-jp.html
@@ -106,6 +106,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+<li>2月4日: 対戦頻度を上げたことが原因で、コンテストサーバーに障害が発生しました。現在、サーバーの移転作業に取り組んでいますが、今のところ復旧の目処は立っていません。
 <li>2月1日: コンテストサーバーは現在不安定な状態が続いています。委員会として本問題の解決に取り組んでいるところです。
 <li>2月1日: コンテストサーバーにおける対戦頻度を上げました。
 <li>1月14日: コンテストサーバーの不調により1月10-13日においてAIプログラムの実行に失敗するなどの現象を生じていました。
