--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Feb 4: The online judgement server encounters some troubles due to the increase in battle frequency. We are hardly dealing with them, but it may take a long time.
 <li>Feb 1: The battle execution server is currently unstable; the committee is tyring to fix the issue. 
 <li>Feb 1: The battle execution frequency has been increased on the server. 
 <li>Jan 14: The battle execution server was in a bad state from 10th Jan to 13th Jan. So, the attempts to compile AIs and auto battle executions kept failed during that time.
