Update info about the troubles.

--- a/HardwareInfo.html
+++ b/HardwareInfo.html
@@ -54,10 +54,10 @@
     <section id="main">
       <h2>Hardware Environment of Online Execution</h2>
       <ul>
-      　　<li>Storage: SSD 30 GB</li>
-      　　<li>Memory: 1 GB</li>
+      　　<li>Storage: SSD 111 GB (RAID 1)</li>
+      　　<li>Memory: 8 GB</li>
       　　<li>CPU: 2 Cores</li>
-      　　<li>Please see <a href="http://vps.sakura.ad.jp/specification/">the information page</a> of virtual private server (VPS) using 1G plan hosted by SAKURA Internet Inc..</li>
+      　　<li>Please see <a href="http://vps.sakura.ad.jp/specification/">the information page</a> of virtual private server (VPS) using ベアメタル8G plan hosted by SAKURA Internet Inc..</li>
       </ul>
     </section>
 
