--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -60,6 +60,9 @@
 	<li><a href="HardwareInfo.html">
 	    予選のハードウェア環境</a></li>
       </ul>
+  <li><a href="SoftwareInfo.html">
+      予選のソフトウェア環境</a></li>
+      </ul>
     </section>
 
 
