--- a/index-jp.html
+++ b/index-jp.html
@@ -106,6 +106,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+<li>2月5日: サーバの移転作業が完了しました。移転に伴い、<a href="HardwareInfo.html">ハードウェア環境</a>および<a href="SoftwareInfo.html">ソフトウェア環境</a>が変更になりましたので、ご確認ください。
 <li>2月5日: 現在、サーバーの移転作業に取り組んでいますが、過去のデータの復旧に時間がかかっており、再開の目処は今のところ立っていません。
 <li>2月4日: 対戦頻度を上げたことが原因で、コンテストサーバーに障害が発生しました。現在、サーバーの移転作業に取り組んでいますが、今のところ復旧の目処は立っていません。
 <li>2月1日: コンテストサーバーは現在不安定な状態が続いています。委員会として本問題の解決に取り組んでいるところです。
