--- a/index-jp.html
+++ b/index-jp.html
@@ -134,7 +134,7 @@
 <p>
 年齢制限はありません。どなたでもご参加いただけます。
 個人、またはチーム（メンバー数上限なし）のいずれの形でもご参加いただけます。
-<a href="http://arena.ai-comp.net/">参加登録サイト</a>からぜひ登録ならびにプログラムを提出ください。
+<a href="https://arena.ai-comp.net/">参加登録サイト</a>からぜひ登録ならびにプログラムを提出ください。
 </p>
     </section>
 
